fix working time columns on mobile, show form error

--- a/client/scss/components/common.scss
+++ b/client/scss/components/common.scss
@@ -507,3 +507,7 @@ h5, .h5 {
 h6, .h6 {
   font-size: 1rem;
 }
+
+.text-center {
+    text-align: center;
+}
